# news_agent

./: .gitignore  FIXES_SUMMARY_2025_11_07.md  LOGGING_INTEGRATION_GUIDE.md  MEMORY_FINALIZATION_ANALYSIS.md  MEMORY_FIX_REQUIRED.md  MEMORY_SYSTEM_WORKING.md  Makefile  POST_RUN_LOG_DEBUG_FINDINGS.md  PROPER_RLS_SETUP.md  README.md  RLS_SETUP_COMPLETE.md  SESSION_COMPLETE_2025_11_06.md  SESSION_FIX_SUMMARY_2025_11_06.md  SESSION_LIFECYCLE_FIX.md  SESSION_LOGGING_COMPLETE.md  SESSION_LOGGING_INTEGRATION.md  SESSION_SUMMARY_2025_11_05.md  TODO.md  pyproject.toml  render.yaml  test_database_only.py  test_memory_finalization.py  test_memory_minimal.py  test_memory_simple.py  test_other_tables.py
.claude/: CLAUDE.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/app/: cache.py  config.py  database.py  main.py
backend/app/api/: conversation.py  conversation_session.py  news.py  user.py  voice.py  voice_settings.py  websocket_simple.py
backend/app/api/user/: __init__.py
backend/app/api/v1/: __init__.py  stock_news.py  stocks.py
backend/app/core/: agent_wrapper_langgraph.py  conversation_tracker.py  heartbeat_monitor.py  streaming_handler.py  streaming_handler.py.backup  websocket_manager.py  websocket_manager_v2.py
backend/app/db/: __init__.py  economic_news.py  stock_news.py  stock_prices.py
backend/app/lfu_cache/: __init__.py  lfu_manager.py
backend/app/llm_agent/: graph.py  llm_limiter.py  logger.py  long_term_memory.py  long_term_memory_supabase.py  memory.py  nodes.py  prompts.py  session_logger.py  state.py
backend/app/llm_agent/memory_data/: query_history.json  user_interests.json  user_profile.json  watchlist.json
backend/app/llm_agent/tools/: __init__.py  general_research.py  tools.py  watchlist_tools.py  watchlist_tools_supabase.py  web_research.py
backend/app/models/: news.py  stock.py  user.py  voice_settings.py
backend/app/scheduler/: __init__.py  scheduler_manager.py
backend/app/services/: __init__.py  news_aggregator.py  stock_news_service.py  stock_price_service.py
backend/app/utils/: conversation_logger.py
backend/logs/agent/errors/: 20251104.jsonl  20251105.jsonl
backend/logs/agent/intents/: 20251104.jsonl  20251105.jsonl  20251106.jsonl  20251107.jsonl
backend/logs/agent/llm/: 20251104.jsonl  20251105.jsonl  20251106.jsonl  20251107.jsonl
backend/logs/agent/sessions/: 20251104.jsonl  20251105.jsonl  20251106.jsonl  20251107.jsonl
database/: fix_user_notes_rls.sql  user_voice_settings_schema.sql
docs/: LOCAL_ASR_SETUP.md  README.md  Voice_News_Agent_API.postman_collection.json  _navbar.md  _sidebar.md  package.json
docs/docs/: README.md  TESTING.md
docs/docs/reference/: ALL_FIXES_COMPLETE.md  API_DESIGN.md  BUG_FIXES_AND_SETUP.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONVERSATION_TRACKING_DESIGN.md  CONVERSATION_TRACKING_FIX.md  CONVERSATION_TRACKING_IMPLEMENTATION.md  DOCUMENTATION_INDEX.md  E2E_TEST_FINDINGS.md  FINAL_CONVERSATION_FIX.md  FINAL_FIX_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_GAP_ANALYSIS.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_QUICK_START.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  NEWS_STORAGE_PLAN.md  OPTION_A_NEWS_TRACKING_IMPLEMENTATION.md  PRD_LangGraph_Migration_AlphaIntel_Reddit_OptIn.md  QUICK_REFERENCE.md  README.md  REDDIT_API_SETUP.md  SCHEDULER_AND_CACHING_GUIDE.md  SESSION_SUMMARY.md  STOCK_NEWS_API_DESIGN.md  STOCK_NEWS_FINAL_SUMMARY.md  STOCK_NEWS_IMPLEMENTATION_CHECKLIST.md  STOCK_NEWS_IMPLEMENTATION_SUMMARY.md  STOCK_NEWS_QUICK_START.md  TESTING_GUIDE.md  TTS_STREAMING_STATUS.md  UI_IMPROVEMENTS_SUMMARY.md
frontend/: vite.config.ts
frontend/.vercel/: project.json
frontend/components/: UserProfileModal.tsx  Watchlist.tsx
frontend/src/components/: ContinuousVoiceInterface.tsx  WatchlistCard.tsx
frontend/src/mocks/: news-data.ts  stock-data.ts
frontend/src/pages/: DashboardPage.tsx  ProfilePage.tsx
frontend/src/services/: news-service.ts  stock-price-service.ts
hz_langgraph_learning/agent-dev/: .dockerignore  .env.example  .gitignore  CHECKLIST_FEATURE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  MULTI_INTENT_RESEARCH.md  README.md  api.py  chat.py  db_manager.py  example_usage.py  kubernetes-deployment.yaml  langgraph.json  requirements.txt  test_api.py  test_checklist_quick.py
hz_langgraph_learning/agent-dev/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
hz_langgraph_learning/agent-dev/agent_core/: __init__.py  graph.py  logging_config.py  nodes.py  prompts.py  state.py  symbol_validator.py
hz_langgraph_learning/agent-dev/chat_logs/: chat_history_chat_20251103_233925.txt
hz_langgraph_learning/agent-dev/eval/: eval_formatter.py  evaluator.py
hz_langgraph_learning/agent-dev/memory_data/: query_history.json  watchlist.json
hz_langgraph_learning/agent-dev/tests/: README.md
langgraph_deploy/: .dockerignore  Dockerfile  k8s-news-agent.yaml
langgraph_deploy/langgraph_dev/: README.md  __init__.py  graph.py  memory.py  nodes.py  requirements.txt  run.py  server.py  state.py  summarize.py
langgraph_deploy/langgraph_dev/mcp/: __init__.py  alphaintel.py  reddit.py
langgraph_deploy/langgraph_dev/tools/: __init__.py  adapters.py  normalizers.py
tests/: check_fk.py  check_session_update.py  check_users.py  debug_schema.py  run_all_tests.py  test_session_update.py
tests/backend/: test_conversation_tracking.py  test_scheduler.py  test_session_lifecycle.py  test_stock_news_api.py  test_stock_news_api_v1.py  test_stock_price_api.py
tests/backend/api/: test_conversation_api.py  test_health_endpoints.py  test_news_api.py  test_stocks_api.py  test_user_api.py  test_user_voice_settings_api.py  test_voice_api.py  test_voice_settings_api.py
tests/backend/llm_agent/: AGENT_WRAPPER_FIX.md  INTEGRATION_E2E_TESTS.md  README.md  __init__.py  conftest.py  pytest.ini  run_integration_tests.sh  run_tests.sh
tests/e2e/: test_conversation_complete_flow.py
tests/src/: test_streaming.py
(+57 files in other folders)
